--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,23 +1,23 @@
 @CHERSET "UTF-8";
 
-body{
+body {
     color: #333333;
     font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
 }
 
-#header{
+#header {
     width: 100%;
     height: 70px;
     background-color: #333333;
 }
 
-#content{
+#content {
     width: 94%;
     margin-top: 15px;
     padding-left: 3%;
 }
 
-h1{
+h1 {
     width: 94%;
     padding-top: 17px;
     padding-left: 3%;
@@ -25,55 +25,55 @@ h1{
     color: #eeeeee;
 }
 
-h2{
+h2 {
     font-size: 36px;
     margin-bottom: 15px;
 }
 
-li{
+li {
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
-p{
+p {
     margin-top: 15px;
     margin-bottom: 15px;
 }
 
-a{
+a {
     text-decoration: none;
     color: #24738e;
 }
 
-table, tr, th, td{
+table, tr, th, td {
     border: 1px solid #cccccc;
 }
 
-table{
+table {
     width: 100%;
     table-layout: fixed;
 }
 
-th{
+th {
     width: 26%;
     padding: 10px 2%;
 }
 
-td{
+td {
     width: 66%;
     padding: 10px 2%;
 }
 
-button{
+button {
     font-size: 14px;
     padding: 5px 10px;
 }
 
-#footer{
+#footer {
     text-align: center;
 }
 
-#flush_success{
+#flush_success {
     width: 100%;
     padding-top: 28px;
     padding-left: 2%;
@@ -81,4 +81,14 @@ button{
     margin-bottom: 15px;
     color: #155724;
     background-color: #d4edda;
+}
+
+#flush_error {
+    width: 100%;
+    padding-top: 28px;
+    padding-left: 2%;
+    padding-bottom: 28px;
+    margin-bottom: 15px;
+    color: #721c24;
+    background-color: #f8d7da;
 }
